<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="30dp" >

        <TextView
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/medicalhistoryTextView"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#78C54F"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <ImageView
            android:id="@+id/ivTakePhoto"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            
            android:layout_gravity="center"
            android:contentDescription="@string/capturedImage"
            android:src="@drawable/img_doctor" />

        <Button
            android:id="@+id/btnetMedicalHistoryTakePhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#607D8B"
            android:padding="14dp"
            android:onClick="dispatchTakePictureIntent"
            android:text="@string/takePresciptionPhoto"
            android:textColor="#ffffff"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dateTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etMedicalHistoryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/dateEditText"
            android:inputType="date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/doctorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/doctorTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etMedicalHistoryDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/doctorEditText"
            android:inputType="text"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/purposeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/purposeTextView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/etMedicalHistoryPurpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/purposeEditText"
            android:inputType="textMultiLine"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnMedicalHistoryInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#607D8B"
            
            android:padding="14dp"
            android:text="@string/buttonSubmit"
            android:textColor="#ffffff"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>