<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/db_check_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="26sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="4"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textCreateProfileHeader"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/textCreateProfileHeader"
                android:textColor="#78C54F"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="9"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textName"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etProfileName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textAge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textAge"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etProfileAge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintAge"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textWeight"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etProfileWeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintWeight"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textHeight"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etProfileHeight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintHeight"
                    android:inputType="number"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textGender"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textGender"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:entries="@array/Sex_Select"
                    android:paddingLeft="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textBloodGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:paddingLeft="15dp"
                    android:text="@string/textBloodGroup"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />

                <EditText
                    android:id="@+id/etProfileBloodGroup"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:hint="@string/hintBloodGroup"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnProfileSubmit"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:background="#607D8B"
            android:onClick="insertButtonClicked"
            android:text="@string/buttonSubmit"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:typeface="monospace" />
    </LinearLayout>

</ScrollView>